--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     @font-face {
       font-family: WorkSans;
-      src: url('./fonts/static/WorkSans-SemiBold.ttf');
+      src: url('WorkSans-SemiBold.ttf');
       font-weight: 600;
     }
 
     @font-face {
       font-family: worksans;
-      src: url('./fonts/static/WorkSans-Regular.ttf');
+      src: url('WorkSans-Regular.ttf');
       font-weight: 400;
     }
   </style>
@@ -37,15 +37,15 @@
     <div class="top"></div>
     <div class="faqs">
       <div class="heading">
-        <img src="./images/icon-star.svg" alt="">
+        <img src="icon-star.svg" alt="">
         <h1>FAQs</h1>
       </div>
       <div class="questions">
         <div class="qs-pair">
           <div class="question" tabindex="0">
             <h4>What is Frontend Mentor, and how will it help me? </h4>
-            <img src="./images/icon-plus.svg" alt="" class="plus">
-            <img src="./images/icon-minus.svg" alt="" class="minus">
+            <img src="icon-plus.svg" alt="" class="plus">
+            <img src="icon-minus.svg" alt="" class="minus">
           </div>
           <div class="answer">
             <p>
@@ -59,8 +59,8 @@
         <div class="qs-pair">
           <div class="question" tabindex="0">
             <h4> Is Frontend Mentor free?</h4>
-            <img src="./images/icon-plus.svg" alt="" class="plus">
-            <img src="./images/icon-minus.svg" alt="" class="minus">
+            <img src="icon-plus.svg" alt="" class="plus">
+            <img src="icon-minus.svg" alt="" class="minus">
           </div>
           <div class="answer">
             <p>
@@ -75,8 +75,8 @@
           <div class="question" tabindex="0">
             <h4> Can I use Frontend Mentor projects in my portfolio?
             </h4>
-            <img src="./images/icon-plus.svg" alt="" class="plus">
-            <img src="./images/icon-minus.svg" alt="" class="minus">
+            <img src="icon-plus.svg" alt="" class="plus">
+            <img src="icon-minus.svg" alt="" class="minus">
           </div>
           <div class="answer">
             <p>
@@ -90,8 +90,8 @@
         <div class="qs-pair">
           <div class="question" tabindex="0">
             <h4> How can I get help if I'm stuck on a challenge?</h4>
-            <img src="./images/icon-plus.svg" alt="" class="plus">
-            <img src="./images/icon-minus.svg" alt="" class="minus">
+            <img src="icon-plus.svg" alt="" class="plus">
+            <img src="icon-minus.svg" alt="" class="minus">
           </div>
           <div class="answer">
             <p>
