--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       src: url('WorkSans-Regular.ttf');
       font-weight: 400;
     }
+    .top{
+    width:100%;
+    height: 256px;
+    background-image: url('background-pattern-desktop.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
   </style>
 </head>
 
